Go over installation instructions for Emacs. Add a basic files, README, INSTALL and AUTHORS. Change version from 0.10.4vc to 0.10.4rc1

--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,7 @@
  - "quit!" is same as "quit unconditionally"
  - irb improvements: Access to non-executing rdebug commands inside irb via 
    "dbgr" method
+ - For emacs package: add README, INSTALL, AUTHORS.
 
 0.10.3
 11/17/08
