--- a/emacs/INSTALL
+++ b/emacs/INSTALL
@@ -12,15 +12,15 @@ http://rubyforge.org/frs/?group_id=1900&release_id=28306
 
 For example for the 0.10.4rc1 release: 
 
-http://rubyforge.org/frs/download.php/46883/ruby-debug-extra-0.10.4rc1.tar.gz
+  wget http://rubyforge.org/frs/download.php/71864/ruby-debug-extra-0.10.4rc1.tar.gz
 
 Untar this, run configure, make, make check and make install. For example:
 
-   tar -xpf ruby-debug-extra-0.10.4rc1.tar.gz
-   cd ruby-debug-extra-0.10.4rc1
-   sh ./configure
-   make && make check 
-   sudo make install  # or as root: make install
+   $ tar -xpf ruby-debug-extra-0.10.4rc1.tar.gz
+   $ cd ruby-debug-extra-0.10.4rc1
+   $ sh ./configure
+   $ make && make check 
+   $ sudo make install  # or as root: make install
 
 configure --help gives customization help. 
 
